--- a/FinProjeto/FinFinancas/package.json
+++ b/FinProjeto/FinFinancas/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
